--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "micro-cors": "^0.1.1",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "^18",
